# atomate2-artatop

./: LICENSE  README.md  pyproject.toml
src/atomate2_artatop/: Untitled Document 1  __init__.py  _version.py  artatop_parser.py  files.py  jobs.py  outputs.py  run.py  schemas.py  settings.py
src/atomate2_artatop/flows/: __init__.py  artatop.py
src/atomate2_artatop/job/: artatop.py
src/atomate2_artatop/plotting/: __init__.py  plot_d_energy.py
src/atomate2_artatop/sets/: __init__.py  core.py
src/custodian_artatop/: __init__.py  handlers.py  jobs.py
test/test_data/artatop/SiC/: test.py
test/test_data/artatop/SiC/output/: CONTCAR  DOSCAR  EIGENVAL  INCAR  OSZICAR  OUTCAR  POSCAR  PROCAR  XDATCAR  custodian.json  re_art  re_lin  re_nlin  result.art_IND  result.art_TOT  result.re
test/test_data/artatop/SiC/output/out_nonlin/: arp_dshg-cb_xyz.txt  arp_dshg-vb_xyz.txt  arp_dshg_xyz.txt  arp_nonlin.txt  arp_nshg_xyz.txt  arp_shg_con_xyz.txt  arp_shg_val_xyz.txt
